[gd_scene load_steps=70 format=3 uid="uid://dcoax2coga3ys"]

[ext_resource type="Script" path="res://character/bomb_guy/bomb_guy.gd" id="1_45w2m"]
[ext_resource type="Texture2D" uid="uid://bub0jue8i5g67" path="res://asset/graphics/character/Bomb Guy/5-Fall/1.png" id="2_0cvv4"]
[ext_resource type="Script" path="res://component/direction/direction.gd" id="2_ajg8j"]
[ext_resource type="Texture2D" uid="uid://c23xj51apax31" path="res://asset/graphics/character/Bomb Guy/1-Idle/1.png" id="2_vis8y"]
[ext_resource type="Texture2D" uid="uid://dy35nwlgbwpre" path="res://asset/graphics/character/Bomb Guy/1-Idle/2.png" id="3_86iww"]
[ext_resource type="Script" path="res://component/state_machine/state_machine.gd" id="3_q77ik"]
[ext_resource type="Texture2D" uid="uid://xkfx370j2gk" path="res://asset/graphics/character/Bomb Guy/5-Fall/2.png" id="3_ux7kb"]
[ext_resource type="Texture2D" uid="uid://dhnqhfu5q2elw" path="res://asset/graphics/character/Bomb Guy/6-Ground/1.png" id="4_0ryy8"]
[ext_resource type="Texture2D" uid="uid://dmu43rvl3who0" path="res://asset/graphics/character/Bomb Guy/1-Idle/3.png" id="4_e2733"]
[ext_resource type="Texture2D" uid="uid://db1w162u81qtt" path="res://asset/graphics/character/Bomb Guy/6-Ground/2.png" id="5_ulr2q"]
[ext_resource type="Texture2D" uid="uid://rruua8nclpiv" path="res://asset/graphics/character/Bomb Guy/1-Idle/4.png" id="5_us3jq"]
[ext_resource type="Texture2D" uid="uid://6ucuaefckmce" path="res://asset/graphics/character/Bomb Guy/1-Idle/5.png" id="6_s1pwa"]
[ext_resource type="Texture2D" uid="uid://cg3r1voedfdca" path="res://asset/graphics/character/Bomb Guy/6-Ground/3.png" id="6_vlnij"]
[ext_resource type="Texture2D" uid="uid://d1l4b3r6i1n67" path="res://asset/graphics/character/Bomb Guy/1-Idle/6.png" id="7_mw0r2"]
[ext_resource type="Texture2D" uid="uid://p3aeksjw5u3h" path="res://asset/graphics/character/Bomb Guy/1-Idle/7.png" id="8_bupjb"]
[ext_resource type="Texture2D" uid="uid://d8bec6fdxouo" path="res://asset/graphics/character/Bomb Guy/1-Idle/8.png" id="9_h21ar"]
[ext_resource type="Texture2D" uid="uid://dmyw63oqnekxe" path="res://asset/graphics/character/Bomb Guy/1-Idle/9.png" id="10_xwljj"]
[ext_resource type="Texture2D" uid="uid://dfddej68rgukt" path="res://asset/graphics/character/Bomb Guy/1-Idle/10.png" id="11_qo8le"]
[ext_resource type="Texture2D" uid="uid://vc8k0k204f1h" path="res://asset/graphics/character/Bomb Guy/1-Idle/11.png" id="12_gvnla"]
[ext_resource type="Texture2D" uid="uid://cx6q3p0vpcmpq" path="res://asset/graphics/character/Bomb Guy/1-Idle/12.png" id="13_by67f"]
[ext_resource type="Texture2D" uid="uid://dgffaycwgta6q" path="res://asset/graphics/character/Bomb Guy/1-Idle/13.png" id="14_ts4vx"]
[ext_resource type="Texture2D" uid="uid://bn7hg6c7ysqsh" path="res://asset/graphics/character/Bomb Guy/1-Idle/14.png" id="15_aapx5"]
[ext_resource type="Texture2D" uid="uid://ba6t4mtf80vxg" path="res://asset/graphics/character/Bomb Guy/1-Idle/15.png" id="16_3vhed"]
[ext_resource type="Texture2D" uid="uid://beulurit0koct" path="res://asset/graphics/character/Bomb Guy/1-Idle/16.png" id="17_oe36q"]
[ext_resource type="Texture2D" uid="uid://c8l61rxk4o2w3" path="res://asset/graphics/character/Bomb Guy/1-Idle/17.png" id="18_2o8ib"]
[ext_resource type="Texture2D" uid="uid://cm60vw75piswn" path="res://asset/graphics/character/Bomb Guy/1-Idle/18.png" id="19_njcof"]
[ext_resource type="Texture2D" uid="uid://tple6v8h1n84" path="res://asset/graphics/character/Bomb Guy/1-Idle/19.png" id="20_amta6"]
[ext_resource type="Texture2D" uid="uid://bvu8wyro6252g" path="res://asset/graphics/character/Bomb Guy/1-Idle/20.png" id="21_itd1y"]
[ext_resource type="Texture2D" uid="uid://uf66mtjf3c3w" path="res://asset/graphics/character/Bomb Guy/1-Idle/21.png" id="22_dt13w"]
[ext_resource type="Texture2D" uid="uid://bvcbrs3yl5g38" path="res://asset/graphics/character/Bomb Guy/1-Idle/22.png" id="23_kiahq"]
[ext_resource type="Texture2D" uid="uid://yubcp48dg0fl" path="res://asset/graphics/character/Bomb Guy/1-Idle/23.png" id="24_dfd1q"]
[ext_resource type="Texture2D" uid="uid://pp4xsmsm6ckp" path="res://asset/graphics/character/Bomb Guy/1-Idle/24.png" id="25_2wdcv"]
[ext_resource type="Texture2D" uid="uid://bhk1pgefwhru4" path="res://asset/graphics/character/Bomb Guy/1-Idle/25.png" id="26_s60ui"]
[ext_resource type="Texture2D" uid="uid://dnglnmewjml81" path="res://asset/graphics/character/Bomb Guy/1-Idle/26.png" id="27_7bsfg"]
[ext_resource type="Texture2D" uid="uid://tdvf5rp6mnqp" path="res://asset/graphics/character/Bomb Guy/2-Run/1.png" id="28_pkxux"]
[ext_resource type="Texture2D" uid="uid://ccvtjymjgmhop" path="res://asset/graphics/character/Bomb Guy/2-Run/2.png" id="29_n3lad"]
[ext_resource type="Texture2D" uid="uid://cy3sbbny6lwit" path="res://asset/graphics/character/Bomb Guy/2-Run/3.png" id="30_q1v0f"]
[ext_resource type="Texture2D" uid="uid://cpbsttqamsugw" path="res://asset/graphics/character/Bomb Guy/2-Run/4.png" id="31_c3vb3"]
[ext_resource type="Texture2D" uid="uid://cmvpxogtcqvh2" path="res://asset/graphics/character/Bomb Guy/2-Run/5.png" id="32_cg8go"]
[ext_resource type="Texture2D" uid="uid://hjc8palqu7kk" path="res://asset/graphics/character/Bomb Guy/2-Run/6.png" id="33_6py8d"]
[ext_resource type="Texture2D" uid="uid://bxv3r7mj1d4qy" path="res://asset/graphics/character/Bomb Guy/4-Jump/1.png" id="33_ajejc"]
[ext_resource type="Texture2D" uid="uid://c52eq0s7qdojs" path="res://asset/graphics/character/Bomb Guy/2-Run/7.png" id="34_12js8"]
[ext_resource type="Texture2D" uid="uid://bt1b08rn55aca" path="res://asset/graphics/character/Bomb Guy/4-Jump/2.png" id="34_60wev"]
[ext_resource type="Texture2D" uid="uid://pdvv5l6b16ss" path="res://asset/graphics/character/Bomb Guy/2-Run/8.png" id="35_lf7x8"]
[ext_resource type="Texture2D" uid="uid://c35ob54hsyvj4" path="res://asset/graphics/character/Bomb Guy/4-Jump/3.png" id="35_u5we8"]
[ext_resource type="Texture2D" uid="uid://bs2n4bqtgdg0g" path="res://asset/graphics/character/Bomb Guy/2-Run/9.png" id="36_i1x55"]
[ext_resource type="Texture2D" uid="uid://1e8efxrc1s6x" path="res://asset/graphics/character/Bomb Guy/4-Jump/4.png" id="36_pb6bu"]
[ext_resource type="Texture2D" uid="uid://ct4p0kkj2wsld" path="res://asset/graphics/character/Bomb Guy/3-Jump Anticipation/1.png" id="37_bveqk"]
[ext_resource type="Texture2D" uid="uid://b6g8aktxxxujr" path="res://asset/graphics/character/Bomb Guy/2-Run/10.png" id="37_wa0dp"]
[ext_resource type="Texture2D" uid="uid://bgle07wd2jp2e" path="res://asset/graphics/character/Bomb Guy/2-Run/11.png" id="38_5k46o"]
[ext_resource type="Texture2D" uid="uid://6vvuxwx20tcc" path="res://asset/graphics/character/Bomb Guy/2-Run/12.png" id="39_cgxjr"]
[ext_resource type="Texture2D" uid="uid://i13rg64oiq6n" path="res://asset/graphics/character/Bomb Guy/2-Run/13.png" id="40_kc85k"]
[ext_resource type="Texture2D" uid="uid://dacs03l1fmswe" path="res://asset/graphics/character/Bomb Guy/2-Run/14.png" id="41_48qwy"]
[ext_resource type="Script" path="res://character/bomb_guy/states/bomb_guy_idle.gd" id="54_evn3i"]
[ext_resource type="Script" path="res://character/bomb_guy/states/bomb_guy_run.gd" id="55_xrwi4"]
[ext_resource type="Script" path="res://character/bomb_guy/states/bomb_guy_fall.gd" id="56_nawd3"]
[ext_resource type="Script" path="res://character/bomb_guy/states/bomb_guy_ground.gd" id="57_ir5pf"]
[ext_resource type="Script" path="res://character/bomb_guy/states/bomb_guy_jump.gd" id="58_hmwpr"]
[ext_resource type="Script" path="res://component/stats/stats.gd" id="59_dq72j"]

[sub_resource type="Animation" id="Animation_8dfnw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_27mk5"]
resource_name = "fall"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_rl4mh"]
resource_name = "ground"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ground"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_bnb67"]
resource_name = "idle"
length = 1.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
}

[sub_resource type="Animation" id="Animation_0k51p"]
resource_name = "jump"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_36skb"]
resource_name = "jump_anticipation"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump_anticipation"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_828na"]
resource_name = "run"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kec6q"]
_data = {
"RESET": SubResource("Animation_8dfnw"),
"fall": SubResource("Animation_27mk5"),
"ground": SubResource("Animation_rl4mh"),
"idle": SubResource("Animation_bnb67"),
"jump": SubResource("Animation_0k51p"),
"jump_anticipation": SubResource("Animation_36skb"),
"run": SubResource("Animation_828na")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_qdy28"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0cvv4")
}, {
"duration": 1.0,
"texture": ExtResource("3_ux7kb")
}],
"loop": true,
"name": &"fall",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_0ryy8")
}, {
"duration": 1.0,
"texture": ExtResource("5_ulr2q")
}, {
"duration": 1.0,
"texture": ExtResource("6_vlnij")
}],
"loop": false,
"name": &"ground",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vis8y")
}, {
"duration": 1.0,
"texture": ExtResource("3_86iww")
}, {
"duration": 1.0,
"texture": ExtResource("4_e2733")
}, {
"duration": 1.0,
"texture": ExtResource("5_us3jq")
}, {
"duration": 1.0,
"texture": ExtResource("6_s1pwa")
}, {
"duration": 1.0,
"texture": ExtResource("7_mw0r2")
}, {
"duration": 1.0,
"texture": ExtResource("8_bupjb")
}, {
"duration": 1.0,
"texture": ExtResource("9_h21ar")
}, {
"duration": 1.0,
"texture": ExtResource("10_xwljj")
}, {
"duration": 1.0,
"texture": ExtResource("11_qo8le")
}, {
"duration": 1.0,
"texture": ExtResource("12_gvnla")
}, {
"duration": 1.0,
"texture": ExtResource("13_by67f")
}, {
"duration": 1.0,
"texture": ExtResource("14_ts4vx")
}, {
"duration": 1.0,
"texture": ExtResource("15_aapx5")
}, {
"duration": 1.0,
"texture": ExtResource("16_3vhed")
}, {
"duration": 1.0,
"texture": ExtResource("17_oe36q")
}, {
"duration": 1.0,
"texture": ExtResource("18_2o8ib")
}, {
"duration": 1.0,
"texture": ExtResource("19_njcof")
}, {
"duration": 1.0,
"texture": ExtResource("20_amta6")
}, {
"duration": 1.0,
"texture": ExtResource("21_itd1y")
}, {
"duration": 1.0,
"texture": ExtResource("22_dt13w")
}, {
"duration": 1.0,
"texture": ExtResource("23_kiahq")
}, {
"duration": 1.0,
"texture": ExtResource("24_dfd1q")
}, {
"duration": 1.0,
"texture": ExtResource("25_2wdcv")
}, {
"duration": 1.0,
"texture": ExtResource("26_s60ui")
}, {
"duration": 1.0,
"texture": ExtResource("27_7bsfg")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_ajejc")
}, {
"duration": 1.0,
"texture": ExtResource("34_60wev")
}, {
"duration": 1.0,
"texture": ExtResource("35_u5we8")
}, {
"duration": 1.0,
"texture": ExtResource("36_pb6bu")
}],
"loop": true,
"name": &"jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_bveqk")
}],
"loop": false,
"name": &"jump_anticipation",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_pkxux")
}, {
"duration": 1.0,
"texture": ExtResource("29_n3lad")
}, {
"duration": 1.0,
"texture": ExtResource("30_q1v0f")
}, {
"duration": 1.0,
"texture": ExtResource("31_c3vb3")
}, {
"duration": 1.0,
"texture": ExtResource("32_cg8go")
}, {
"duration": 1.0,
"texture": ExtResource("33_6py8d")
}, {
"duration": 1.0,
"texture": ExtResource("34_12js8")
}, {
"duration": 1.0,
"texture": ExtResource("35_lf7x8")
}, {
"duration": 1.0,
"texture": ExtResource("36_i1x55")
}, {
"duration": 1.0,
"texture": ExtResource("37_wa0dp")
}, {
"duration": 1.0,
"texture": ExtResource("38_5k46o")
}, {
"duration": 1.0,
"texture": ExtResource("39_cgxjr")
}, {
"duration": 1.0,
"texture": ExtResource("40_kc85k")
}, {
"duration": 1.0,
"texture": ExtResource("41_48qwy")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gccjw"]
radius = 9.0
height = 24.0

[node name="BombGuy" type="CharacterBody2D" node_paths=PackedStringArray("graphics", "direction", "state_machine", "stats", "animation_player", "bubble_marker")]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_45w2m")
graphics = NodePath("Graphics")
direction = NodePath("Direction")
state_machine = NodePath("StateMachine")
stats = NodePath("Stats")
animation_player = NodePath("Graphics/AnimationPlayer")
bubble_marker = NodePath("Marker2D")

[node name="Graphics" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
libraries = {
"": SubResource("AnimationLibrary_kec6q")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Graphics"]
position = Vector2(0, -14)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_qdy28")
animation = &"idle"

[node name="Direction" type="Node" parent="." node_paths=PackedStringArray("Graphics")]
script = ExtResource("2_ajg8j")
Graphics = NodePath("../Graphics")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_q77ik")
initial_state = NodePath("BombGuyIdle")

[node name="BombGuyIdle" type="Node" parent="StateMachine"]
script = ExtResource("54_evn3i")

[node name="BombGuyRun" type="Node" parent="StateMachine"]
script = ExtResource("55_xrwi4")

[node name="BombGuyFall" type="Node" parent="StateMachine"]
script = ExtResource("56_nawd3")

[node name="BombGuyGround" type="Node" parent="StateMachine"]
script = ExtResource("57_ir5pf")

[node name="BombGuyJump" type="Node" parent="StateMachine"]
script = ExtResource("58_hmwpr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -12)
shape = SubResource("CapsuleShape2D_gccjw")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(8, -27)

[node name="Stats" type="Node" parent="."]
script = ExtResource("59_dq72j")
